syntax = "proto3";

package jobmanager;
option java_package = "com.aadi.jobmanager";
option java_outer_classname = "JobManagerProto";
option java_multiple_files = true;

service JobManager {
    // UNARY RPC to create a job
    rpc createJob(CreateJobRequest) returns (CreateJobResponse);
}

message CreateJobRequest {
    string command = 1;
}

message CreateJobResponse {
    string job_id = 1;
    int32 exit_code = 2;
    string error_message = 3;
    string output = 4;
}